testdata/baselines/reference/submodule/compiler/jsFileCompilationTypeAliasSyntax.errors.txt
a.js(1,10): error TS2304: Cannot find name 'b'.


==== a.js (1 errors) ====
    type a = b;
             ~
!!! error TS2304: Cannot find name 'b'.